--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </script>
 <div class="container-lg px-3 markdown-body">
     <div>
-    <h3 style="float: left; margin-top: 5px; !important">Empty filament spool weight database</h3> <h4 style="float: right; margin-top: 5px !important; font-weight: 500 !important;">Don't see your Spool Brand here? <a href="https://github.com/samster395/empty_spool" target=”_blank”>Weigh it when empty and contribute here</a></h4>
+    <h3 style="float: left; margin-top: 5px; !important">Empty filament spool weight database</h3> <h4 style="float: right; margin-top: 5px !important; font-weight: 500 !important;">Don't see your Spool Brand here? <a href="https://github.com/emptyspool/emptyspool.github.io" target=”_blank”>Weigh it when empty and contribute here</a></h4>
     </div>
 <br>
 <table id="table" class="display" style="width:100%;">
